--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,9 +13,9 @@
         </a>
         <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="nav__list">
-          <li class="nav__item nav__item--active"><a href="index.html">Главная</a></li>
-          <li class="nav__item"><a>Каталог продукции</a></li>
-          <li class="nav__item"><a href="form.html">Подбор программы</a></li>
+          <li class="nav__item nav__item--active"><a href="index.html" class="nav__link">Главная</a></li>
+          <li class="nav__item"><a class="nav__link">Каталог продукции</a></li>
+          <li class="nav__item"><a href="form.html" class="nav__link">Подбор программы</a></li>
         </ul>
       </nav>
     </header>
@@ -28,24 +28,25 @@
             <a href="product.html" class="catalog__link">
               <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
             </a>
-            <a href="product.html" class="catalog__link">
-              <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
-            </a>
-            <table class="catalog__table table-features">
-              <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
-              <tr>
-                <td class="table-features__cell">Объем</td>
-                <td class="table-features__cell table-features__cell--right">500 г</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Вкус</td>
-                <td class="table-features__cell table-features__cell--right">Курица</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Цена</td>
-                <td class="table-features__cell table-features__cell--right">700 Р</td>
-              </tr>
-            </table>
+            <div class="catalog__wrapper">
+              <a href="product.html" class="catalog__link">
+                <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+              </a>
+              <table class="catalog__table table-features">
+                <tr>
+                  <td class="table-features__cell">Объем</td>
+                  <td class="table-features__cell table-features__cell--right">500 г</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Вкус</td>
+                  <td class="table-features__cell table-features__cell--right">Курица</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Цена</td>
+                  <td class="table-features__cell table-features__cell--right">700 Р</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
@@ -53,24 +54,25 @@
             <a href="product.html" class="catalog__link">
               <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 1000" class="catalog__picture">
             </a>
-            <a href="product.html" class="catalog__link">
-              <h3 class="catalog__name">Cat&nbsp;Energy PRO 1000&nbsp;г</h3>
-            </a>
-            <table class="catalog__table table-features">
-              <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 1000&nbsp;г</caption> -->
-              <tr>
-                <td class="table-features__cell">Объем</td>
-                <td class="table-features__cell table-features__cell--right">1000 г</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Вкус</td>
-                <td class="table-features__cell table-features__cell--right">Курица</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Цена</td>
-                <td class="table-features__cell table-features__cell--right">1000 Р</td>
-              </tr>
-            </table>
+            <div>
+              <a href="product.html" class="catalog__link">
+                <h3 class="catalog__name">Cat&nbsp;Energy PRO 1000&nbsp;г</h3>
+              </a>
+              <table class="catalog__table table-features">
+                <tr>
+                  <td class="table-features__cell">Объем</td>
+                  <td class="table-features__cell table-features__cell--right">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Вкус</td>
+                  <td class="table-features__cell table-features__cell--right">Курица</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Цена</td>
+                  <td class="table-features__cell table-features__cell--right">1000 Р</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
@@ -78,24 +80,25 @@
             <a href="product.html" class="catalog__link">
               <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
             </a>
-            <a href="product.html" class="catalog__link">
-              <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
-            </a>
-            <table class="catalog__table table-features">
-              <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
-              <tr>
-                <td class="table-features__cell">Объем</td>
-                <td class="table-features__cell table-features__cell--right">500 г</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Вкус</td>
-                <td class="table-features__cell table-features__cell--right">Рыба</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Цена</td>
-                <td class="table-features__cell table-features__cell--right">700 Р</td>
-              </tr>
-            </table>
+            <div>
+              <a href="product.html" class="catalog__link">
+                <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+              </a>
+              <table class="catalog__table table-features">
+                <tr>
+                  <td class="table-features__cell">Объем</td>
+                  <td class="table-features__cell table-features__cell--right">500 г</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Вкус</td>
+                  <td class="table-features__cell table-features__cell--right">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Цена</td>
+                  <td class="table-features__cell table-features__cell--right">700 Р</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
@@ -103,74 +106,77 @@
             <a href="product.html" class="catalog__link">
               <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
             </a>
-            <a href="product.html" class="catalog__link">
-              <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
-            </a>
-            <table class="catalog__table table-features">
-              <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
-              <tr>
-                <td class="table-features__cell">Объем</td>
-                <td class="table-features__cell table-features__cell--right">1000 г</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Вкус</td>
-                <td class="table-features__cell table-features__cell--right">Рыба</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Цена</td>
-                <td class="table-features__cell table-features__cell--right">1000 Р</td>
-              </tr>
-            </table>
+            <div>
+              <a href="product.html" class="catalog__link">
+                <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+              </a>
+              <table class="catalog__table table-features">
+                <tr>
+                  <td class="table-features__cell">Объем</td>
+                  <td class="table-features__cell table-features__cell--right">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Вкус</td>
+                  <td class="table-features__cell table-features__cell--right">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Цена</td>
+                  <td class="table-features__cell table-features__cell--right">1000 Р</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
-          <article class="catalog__item" class="catalog__link">
-            <a href="product.html">
+          <article class="catalog__item">
+            <a href="product.html"  class="catalog__link">
               <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 500" class="catalog__picture">
             </a>
-            <a href="product.html" class="catalog__link">
-              <h3 class="catalog__name">Cat&nbsp;Energy Slim 500&nbsp;г</h3>
-            </a>
-            <table class="catalog__table table-features">
-              <!-- <caption class="table-features__name">Cat&nbsp;Energy Slim 500&nbsp;г</caption> -->
-              <tr>
-                <td class="table-features__cell">Объем</td>
+            <div>
+              <a href="product.html" class="catalog__link">
+                <h3 class="catalog__name">Cat&nbsp;Energy Slim 500&nbsp;г</h3>
+              </a>
+              <table class="catalog__table table-features">
+                <tr>
+                  <td class="table-features__cell">Объем</td>
                 <td class="table-features__cell table-features__cell--right">500 г</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Вкус</td>
-                <td class="table-features__cell table-features__cell--right">Гречка</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Цена</td>
-                <td class="table-features__cell table-features__cell--right">400 Р</td>
-              </tr>
-            </table>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Вкус</td>
+                  <td class="table-features__cell table-features__cell--right">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Цена</td>
+                  <td class="table-features__cell table-features__cell--right">400 Р</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
-          <article class="catalog__item" class="catalog__link">
-            <a href="product.html">
+          <article class="catalog__item">
+            <a href="product.html" class="catalog__link">
               <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 1000" class="catalog__picture">
             </a>
-            <a href="product.html" class="catalog__link">
-              <h3 class="catalog__name">Cat&nbsp;Energy Slim 1000&nbsp;г</h3>
-            </a>
-            <table class="catalog__table table-features">
-              <!-- <caption class="table-features__name">Cat&nbsp;Energy Slim 1000&nbsp;г</caption> -->
-              <tr>
-                <td class="table-features__cell">Объем</td>
-                <td class="table-features__cell table-features__cell--right">1000 г</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Вкус</td>
-                <td class="table-features__cell table-features__cell--right">Гречка</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Цена</td>
-                <td class="table-features__cell table-features__cell--right">700 Р</td>
-              </tr>
-            </table>
+            <div>
+              <a href="product.html" class="catalog__link">
+                <h3 class="catalog__name">Cat&nbsp;Energy Slim 1000&nbsp;г</h3>
+              </a>
+              <table class="catalog__table table-features">
+                <tr>
+                  <td class="table-features__cell">Объем</td>
+                  <td class="table-features__cell table-features__cell--right">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Вкус</td>
+                  <td class="table-features__cell table-features__cell--right">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Цена</td>
+                  <td class="table-features__cell table-features__cell--right">700 Р</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
@@ -178,33 +184,35 @@
             <a href="product.html" class="catalog__link">
               <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 500" class="catalog__picture">
             </a>
-            <a href="product.html" class="catalog__link">
-              <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
-            </a>
-            <table class="catalog__table table-features">
-              <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
-              <tr>
-                <td class="table-features__cell">Объем</td>
-                <td class="table-features__cell table-features__cell--right">500 г</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Вкус</td>
-                <td class="table-features__cell table-features__cell--right">Рис</td>
-              </tr>
-              <tr>
-                <td class="table-features__cell">Цена</td>
-                <td class="table-features__cell table-features__cell--right">500 Р</td>
-              </tr>
-            </table>
+            <div>
+              <a href="product.html" class="catalog__link">
+                <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+              </a>
+              <table class="catalog__table table-features">
+                <tr>
+                  <td class="table-features__cell">Объем</td>
+                  <td class="table-features__cell table-features__cell--right">500 г</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Вкус</td>
+                  <td class="table-features__cell table-features__cell--right">Рис</td>
+                </tr>
+                <tr>
+                  <td class="table-features__cell">Цена</td>
+                  <td class="table-features__cell table-features__cell--right">500 Р</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
-        </div>
-        <div class="catalog__more more">
-          <a href="" class="more__plus"></a>
-          <p class="more__goods">Показать еще 100500 товаров</p>
-          <p class="more__taste">На самом деле вкусов гораздо больше!</p>
-          <a class="more__button button" href="">Показать все</a>
+          <article class="catalog__more more">
+            <a href="" class="more__plus"></a>
+            <p class="more__goods">Показать еще 100500 товаров</p>
+            <p class="more__taste">На самом деле вкусов гораздо больше!</p>
+            <a class="more__button button" href="">Показать все</a>
+          </article>
+
         </div>
       </section>
 
