--- a/source/form.html
+++ b/source/form.html
@@ -13,9 +13,9 @@
         </a>
         <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="nav__list">
-          <li class="nav__item nav__item--active"><a href="index.html">Главная</a></li>
-          <li class="nav__item"><a href="catalog.html">Каталог продукции</a></li>
-          <li class="nav__item"><a>Подбор программы</a></li>
+          <li class="nav__item nav__item--active"><a href="index.html" class="nav__link">Главная</a></li>
+          <li class="nav__item"><a href="catalog.html" class="nav__link">Каталог продукции</a></li>
+          <li class="nav__item"><a class="nav__link">Подбор программы</a></li>
         </ul>
       </nav>
     </header>
