--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Кэт энерджи</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -43,7 +44,7 @@
                 </tr>
                 <tr>
                   <td class="table-features__cell">Цена</td>
-                  <td class="table-features__cell table-features__cell--right">700 Р</td>
+                  <td class="table-features__cell table-features__cell--right">700 Р.</td>
                 </tr>
               </table>
             </div>
@@ -69,7 +70,7 @@
                 </tr>
                 <tr>
                   <td class="table-features__cell">Цена</td>
-                  <td class="table-features__cell table-features__cell--right">1000 Р</td>
+                  <td class="table-features__cell table-features__cell--right">1000 Р.</td>
                 </tr>
               </table>
             </div>
@@ -95,7 +96,7 @@
                 </tr>
                 <tr>
                   <td class="table-features__cell">Цена</td>
-                  <td class="table-features__cell table-features__cell--right">700 Р</td>
+                  <td class="table-features__cell table-features__cell--right">700 Р.</td>
                 </tr>
               </table>
             </div>
@@ -108,7 +109,7 @@
             </a>
             <div>
               <a href="product.html" class="catalog__link">
-                <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+                <h3 class="catalog__name">Cat&nbsp;Energy PRO 1000&nbsp;г</h3>
               </a>
               <table class="catalog__table table-features">
                 <tr>
@@ -121,7 +122,7 @@
                 </tr>
                 <tr>
                   <td class="table-features__cell">Цена</td>
-                  <td class="table-features__cell table-features__cell--right">1000 Р</td>
+                  <td class="table-features__cell table-features__cell--right">1000 Р.</td>
                 </tr>
               </table>
             </div>
@@ -147,7 +148,7 @@
                 </tr>
                 <tr>
                   <td class="table-features__cell">Цена</td>
-                  <td class="table-features__cell table-features__cell--right">400 Р</td>
+                  <td class="table-features__cell table-features__cell--right">400 Р.</td>
                 </tr>
               </table>
             </div>
@@ -173,7 +174,7 @@
                 </tr>
                 <tr>
                   <td class="table-features__cell">Цена</td>
-                  <td class="table-features__cell table-features__cell--right">700 Р</td>
+                  <td class="table-features__cell table-features__cell--right">700 Р.</td>
                 </tr>
               </table>
             </div>
@@ -186,7 +187,7 @@
             </a>
             <div>
               <a href="product.html" class="catalog__link">
-                <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+                <h3 class="catalog__name">Cat&nbsp;Energy SLIM 500&nbsp;г</h3>
               </a>
               <table class="catalog__table table-features">
                 <tr>
@@ -199,7 +200,7 @@
                 </tr>
                 <tr>
                   <td class="table-features__cell">Цена</td>
-                  <td class="table-features__cell table-features__cell--right">500 Р</td>
+                  <td class="table-features__cell table-features__cell--right">500 Р.</td>
                 </tr>
               </table>
             </div>
@@ -208,7 +209,7 @@
 
           <article class="catalog__more more">
             <a href="" class="more__plus"></a>
-            <p class="more__goods">Показать еще 100500 товаров</p>
+            <h3 class="more__goods">Показать еще 100500 товаров</h3>
             <p class="more__taste">На самом деле вкусов гораздо больше!</p>
             <a class="more__button button" href="">Показать все</a>
           </article>
