--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,11 @@
     <header class="header">
       <nav class="nav nav--index">
         <a class="nav__logo-link">
-          <img src="https://via.placeholder.com/191x39"  width="191" height="39" alt="Cat Energy" class="logo">
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img src="img/logo-mobile.svg"  width="191" height="39" alt="Cat Energy" class="nav__logo-image">
+          </picture>
         </a>
         <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="nav__list">
@@ -22,7 +26,6 @@
       <section class="promo">
         <h1 class="promo__header">Функциональное питание для котов</h1>
         <p class="promo__motivation">Занялся собой? Займись котом!</p>
-        <!-- <img src="https://via.placeholder.com/240x260"  width="240" height="260" alt="Банка корма" class="promo__can"> возможно эта картинка будет фоном -->
         <h2 class="visually-hidden">подобрать программу</h2>
         <a href="" class="promo__button button">подобрать программу</a>
       </section>
@@ -30,16 +33,14 @@
     <main class="main">
       <section class="program">
         <div class="program__variant">
-          <!-- <img class="program__logo program__logo--slim" src="https://via.placeholder.com/55x55"  width="55" height="55" alt="slim logo"> -->
           <h3 class="program__header">Похудение</h3>
           <p class="program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a href="" class="program__link">Каталог Slim</a>
         </div>
         <div class="program__variant">
-          <!-- <img class="program__logo program__logo--mass" src="https://via.placeholder.com/55x55"  width="55" height="55" alt="mass logo"> -->
           <h3 class="program__header">Набор массы</h3>
           <p class="program__text program__text--mass">Заработать авторитет среди дворовых котов и&nbsp;даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a href="" class="program__link">Каталог Pro</a>
+          <a href="" class="program__link program__link--mass">Каталог Pro</a>
         </div>
       </section>
       <section class="advantages">
@@ -60,59 +61,67 @@
         </ul>
       </section>
       <section class="example">
-        <h2 class="example__header">Живой пример</h2>
-        <p class="example__about">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <dl class="example__stat stat">
-          <dt class="stat__element">5 кг</dt>
-          <dd class="stat__description">снижение веса</dd>
-        </dl>
-        <dl class="example__stat stat">
-          <dt class="stat__element">60 дней</dt>
-          <dd class="stat__description">затрачено времени</dd>
-        </dl>
-        <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
+        <div class="example__wrapper">
+          <h2 class="example__header">Живой пример</h2>
+          <p class="example__about">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <dl class="example__stat stat">
+            <dt class="stat__element">5 кг</dt>
+            <dd class="stat__description stat__description--weight">снижение веса</dd>
+          </dl>
+          <dl class="example__stat stat">
+            <dt class="stat__element">60 дней</dt>
+            <dd class="stat__description">затрачено времени</dd>
+          </dl>
+          <p class="example__expenses">Затраты на питание: 15&nbsp;000&nbsp;руб.</p>
+        </div>
         <img src="https://via.placeholder.com/311x232"  width="311" height="232" alt="cat before" class="example__picture">
-        <p class="example__checkbox-text">Было</p>
-        <button type="button" class="example__checkbox"></button>
-        <p class="example__checkbox-text">Стало</p>
+        <div class="example__wrapper example__wrapper--checkbox">
+          <p class="example__checkbox-text">Было</p>
+          <button type="button" class="example__checkbox"></button>
+          <p class="example__checkbox-text example__checkbox-text--after">Стало</p>
+        </div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
         <h2 class="footer__header">приглашаем к&nbsp;сотрудничеству дилеров!</h2>
-        <address class="footer__address">ул. Большая Конюшенная,&nbsp;д.&nbsp;19/8
-      Санкт-Петербург</address>
-    </div>
+        <div>
+          <address class="footer__address">ул. Большая Конюшенная,&nbsp;д.&nbsp;19/8</address>
+          <address class="footer__address">Санкт-Петербург</address>
+      </div>
+      </div>
       <div class="footer__map">
-        <!-- тут будет карта вместо дива-->
+        <!-- тут будет карта-->
       </div>
       <div class="footer__grey">
         <a class="footer__logo-link">
-          <img src="https://via.placeholder.com/128x24"  width="128" height="24" alt="Cat Energy" class="footer__logo">
+          <img src="img/logo-footer.svg"  width="128" height="24" alt="Cat Energy" class="footer__logo">
         </a>
         <ul class="social">
           <li class="social__item">
             <a href="https://vk.com/" class="social__button social__button--vk">
               <span class="visually-hidden">Vkontakte</span>
-              <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+              <img class="social__image social__image--vk" src="img/icon-vk.svg"  width="22" height="12" alt="Vkontakte"> <!--цвета иконок не те -->
             </a>
           </li>
           <li class="social__item">
             <a href="https://www.instagram.com/" class="social__button social__button--instagram">
               <span class="visually-hidden">Instagram</span>
-              <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+              <img class="social__image" src="img/icon-insta.svg"  width="17" height="17" alt="Instagram">
             </a>
           </li>
           <li class="social__item">
             <a href="https://www.facebook.com/" class="social__button social__button--facebook">
               <span class="visually-hidden">Facebook</span>
-              <img class="social__image" src="https://via.placeholder.com/20x20" width="20" height="20" alt="vk">
+              <img class="social__image social__image--fb" src="img/icon-fb.svg" width="10" height="19" alt="Facebook">
             </a>
           </li>
         </ul>
         <div class="copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
+          <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+            <img src="img/htmlacademy.svg"  width="27" height="34" alt="HTML Academy" class="copyright__logo-image">
+          </a>
         </div>
       </div>
     </footer>
