--- a/source/index.html
+++ b/source/index.html
@@ -74,8 +74,13 @@
           </dl>
           <p class="example__expenses">Затраты на питание: 15&nbsp;000&nbsp;руб.</p>
         </div>
-        <img src="https://via.placeholder.com/311x232"  width="311" height="232" alt="cat before" class="example__picture">
-        <div class="example__wrapper example__wrapper--checkbox">
+        <div class="example__wrapper-2">
+          <div class="example__before">
+            <img src="https://via.placeholder.com/311x232"  width="311" height="232" alt="cat before" class="example__picture example__picture--before">
+          </div>
+          <div class="example__after">
+            <img src="https://via.placeholder.com/311x232"  width="311" height="232" alt="cat after" class="example__picture example__picture--after">
+          </div>
           <p class="example__checkbox-text">Было</p>
           <button type="button" class="example__checkbox"></button>
           <p class="example__checkbox-text example__checkbox-text--after">Стало</p>
